<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/horizontal"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="horizontal">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/NaqelBlue"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/sign_title"
        android:textColor="@android:color/white"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:weightSum="3">

        <Button
            android:id="@+id/cancel"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/NaqelBlue"
            android:text="@string/cancel"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/clear"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/NaqelBlue"
            android:text="@string/clear"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/getsign"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@color/NaqelBlue"
            android:text="@string/save"
            android:textColor="@android:color/white"
            tools:ignore="ButtonStyle" />

    </LinearLayout>



</LinearLayout>
    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:background="#fff"
        android:orientation="horizontal" />
</TableLayout>