<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageView
            android:layout_width="16dp"
            android:layout_height="16dp"
            android:background="@mipmap/back_icon"></ImageView>

        <TextView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:text="@string/back"
            android:textColor="@color/Black"
            android:textSize="16dp"></TextView>

        <TextView
            android:id="@+id/next"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.5"
            android:gravity="right"
            android:text="@string/next"
            android:textColor="@color/Black"
            android:textSize="16dp"></TextView>

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="18dp"
            android:layout_marginTop="12dp"
            android:layout_marginRight="18dp"
            android:text="Dispatch Checklist"
            android:textColor="@color/Black"
            android:textSize="25dp"
            android:textStyle="bold"></TextView>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="8dp"
            android:background="@color/Black"></View>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/safetyCurtainsAndCargoPic"
                android:textColor="@color/Black"
                android:textSize="16dp"
                android:textStyle="bold"></TextView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                android:gravity="center">

                <Button
                    android:id="@+id/uploadFile"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:background="@color/NaqelBlue"
                    android:gravity="center"
                    android:paddingLeft="60dp"
                    android:paddingRight="60dp"
                    android:text="@string/uploadFile"
                    android:textAllCaps="false"
                    android:textColor="@color/White"></Button>
            </LinearLayout>


        </LinearLayout>

        <GridView
            android:id="@+id/imagesGridview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@color/White"
            android:gravity="center"
            android:horizontalSpacing="10dp"
            android:numColumns="2"
            android:verticalSpacing="10dp" />

    </LinearLayout>


</LinearLayout>